fixed test compile error